# easy-scala3

./: .dockerignore  .gitignore  404.html  CLAUDE.md  Dockerfile  Makefile  README.md  build.sbt  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.bat  setup.ps1  setup.py  setup.sh  sitemap.xml
appendix/appendixA/: index.html
appendix/appendixB/: index.html
appendix/appendixC/: index.html
appendix/appendixD/: index.html
appendix/appendixE/: index.html
appendix/appendixF/: index.html
docs/: index.md
docs/appendix/: appendixA.md  appendixB.md  appendixC.md  appendixD.md  appendixE.md  appendixF.md
docs/part1/: chapter00.md  chapter01.md  chapter02.md
docs/part2/: chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md
docs/part3/: chapter08.md  chapter09.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md
docs/part4/: chapter14.md  chapter15.md  chapter16.md  chapter17.md  chapter18.md  chapter19.md
docs/part5/: chapter20.md  chapter21.md
docs/part6/: chapter22.md  chapter23.md  chapter24.md
docs/part7/: chapter25.md  chapter26.md  chapter27.md  chapter28.md  chapter29.md  chapter30.md
docs/part8/: chapter31.md  chapter32.md  chapter33.md
docs/part9/: chapter34.md  chapter35.md  chapter36.md  chapter37.md
part1/chapter00/: index.html
part1/chapter01/: index.html
part1/chapter02/: index.html
part2/chapter03/: index.html
part2/chapter04/: index.html
part2/chapter05/: index.html
part2/chapter06/: index.html
part2/chapter07/: index.html
part3/chapter08/: index.html
part3/chapter09/: index.html
part3/chapter10/: index.html
part3/chapter11/: index.html
part3/chapter12/: index.html
part3/chapter13/: index.html
part4/chapter14/: index.html
part4/chapter15/: index.html
part4/chapter16/: index.html
part4/chapter17/: index.html
search/: search_index.json
(+27 files in other folders)
